Fixed css overlap on forms

--- a/app/assets/stylesheets/forms.css
+++ b/app/assets/stylesheets/forms.css
@@ -2,27 +2,28 @@
 	border-radius: 0.5em;
 	box-shadow: 0 0 1em 0 rgba(51,51,51,0.25);
 	display: block;
-	max-width: 480px;
+	max-width: 800px;
+	max-height: 800px;
 	overflow: hidden;
 	-webkit-transform: translate(-50%, -50%);
 	-ms-transform: translate(-50%, -50%);
 	transform: translate(-50%, -50%);
 	padding: 2em;
 	position: absolute;
-		top: 50%;
+		top: 60%;
 		left: 50%;
 		z-index: 1;
 	width: 98%;
 }
 .container:before{
 	background: url('newsprint.jpg') center no-repeat;
-	background-size: 65%;
+	background-size: 100%;
 	content: '';
 	-webkit-filter: blur(1px);
 	filter: blur(1px);
 	height: 100vh;
 	position: absolute;
-		top: 50%;
+		top: 60%;
 		left: 50%;
 		z-index: -1;
 	-webkit-transform: translate(-50%, -50%);
